# telegram-planfix-assistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  cliff.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: dry-run-contract.md  init-plan.md
docs/plans/: 2026-05-20-first-day-fixes.md  20260518-telegram-planfix-assistant-mvp.md  20260519-telegram-skill-and-dry-run.md  20260519-topics-layout-config-cli-http.md
docs/plans/completed/: 20260519-topics-layout-config-cli-http.md
scripts/: docker-smoke.sh  e2e_cli_test.sh  e2e_http_extras_test.sh  e2e_test.sh
skills/telegram-planfix-assistant/: SKILL.md
src/telegram_planfix_assistant/: __init__.py  health.py
src/telegram_planfix_assistant/cli/: main.py  (+1 more)
tests/: conftest.py  test_app_skeleton.py  test_cli_groups_layout.py  test_cli_operations.py  test_config_loader.py  test_docker_image.py  test_dry_run_contract.py  test_dry_run_folders_operations.py  test_dry_run_groups_topics.py  test_dry_run_members_messages.py  test_folders.py  test_groups.py  test_groups_layout.py  test_health.py  test_http_groups_layout.py  test_http_lifespan.py  test_members.py  test_members_remove.py  test_messages.py  test_observability_alerts.py  test_observability_logging.py  test_persistence.py  test_proxy.py  test_skill_errors_scope.py  test_skill_inventory.py  test_skill_scenarios.py  test_skill_structure.py  test_telegram_client.py  test_topics.py  test_topics_bulk.py  test_topics_close.py  test_topics_telethon_backend.py  test_worker_queue.py
(+41 files in other folders)
