[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "telegram-planfix-assistant"
version = "0.1.0"
description = "Telegram automation service for Planfix <-> Telegram integration (MTProto/Telethon)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }
authors = [{ name = "Stanislav Popov" }]
dependencies = [
    "telethon>=1.36,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pyyaml>=6.0,<7.0",
    "typer>=0.12,<1.0",
    "structlog>=24.1,<25.0",
    "SQLAlchemy>=2.0,<3.0",
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.5,<1.0",
    "git-cliff>=2.0.0",
    "pre-commit>=3.7,<5.0",
]

[project.scripts]
telegram-planfix-assistant = "telegram_planfix_assistant.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]
